--- a/TSK-PA-CreateChannelAction_1/TSK-PA-CreateChannelAction_1.csproj
+++ b/TSK-PA-CreateChannelAction_1/TSK-PA-CreateChannelAction_1.csproj
@@ -16,8 +16,12 @@
 	<PropertyGroup>
 		<DefineConstants>$(DefineConstants);DCFv1;DBInfo;ALARM_SQUASHING</DefineConstants>
 	</PropertyGroup>
+	<PropertyGroup>
+		<DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences>
+	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Skyline.DataMiner.Dev.Automation" Version="10.1.0.6" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="Skyline.DataMiner.Dev.Automation" Version="10.3.12.2" />
 	</ItemGroup>
 	<ProjectExtensions>
 	    <VisualStudio>
