--- a/TSK-PA-CreateChannelAction_1/TSK-PA-CreateChannelAction_1.csproj
+++ b/TSK-PA-CreateChannelAction_1/TSK-PA-CreateChannelAction_1.csproj
@@ -23,6 +23,20 @@
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="Skyline.DataMiner.Dev.Automation" Version="10.3.12.2" />
 	</ItemGroup>
+	<ItemGroup>
+	  <Reference Include="Newtonsoft.Json">
+	    <HintPath>..\Dlls\Newtonsoft.Json.dll</HintPath>
+	  </Reference>
+	  <Reference Include="ProcessAutomation">
+	    <HintPath>..\Dlls\ProcessAutomation.dll</HintPath>
+	  </Reference>
+	  <Reference Include="SLCodeLibrary">
+	    <HintPath>..\Dlls\SLCodeLibrary.dll</HintPath>
+	  </Reference>
+	  <Reference Include="SLSRMLibrary">
+	    <HintPath>..\Dlls\SLSRMLibrary.dll</HintPath>
+	  </Reference>
+	</ItemGroup>
 	<ProjectExtensions>
 	    <VisualStudio>
 		    <UserProperties DisLinkedXmlFile="..\TSK-PA-CreateChannelAction.xml" DisProjectType="automationScriptProject" DisLinkId="1" />
